# cate

./: .gitignore  2025-11-26-conversation-2025-11-25-catesyntaxhighlightinggu.txt  CATE_SYNTAX_HIGHLIGHTING_GUIDE.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: release.yml  winget.yml  winget.yml.disabled
src/: encoder.rs  highlighter.rs  main.rs  printer.rs
