[package]
name = "cate"
version = "0.4.1"
edition = "2021"
authors = ["wen"]
description = "A lightweight CLI tool to display file contents with encoding support and syntax highlighting"
license = "MIT"

[dependencies]
encoding_rs = "0.8"    # 編碼處理
pico-args = "0.5"      # CLI 參數解析
anyhow = "1.0"         # 錯誤處理

# 語法高亮支援（使用 bat 的語法集 + syntect 內建主題）
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "regex-onig", "default-themes"] }
once_cell = "1.19"     # 用於延遲初始化
bincode = "1.0"        # 用於反序列化 syntaxes.bin
flate2 = "1.0"         # 用於解壓縮（syntaxes.bin 載入需要）
serde = "1.0"          # bincode 需要的序列化介面
ansi_colours = "1.2"   # RGB 到 ANSI 256 色轉換（與 bat 相同）

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # 用於 fstat 檢測文件類型

[features]
default = ["syntax-highlighting"]
syntax-highlighting = []

[profile.release]
# 注意：這些設定會被 GitHub Actions workflow 中的 Windows builds 覆蓋
# - Windows builds: 使用環境變數覆蓋為溫和優化以避免防毒軟體誤報
# - Linux/macOS builds: 直接使用以下激進優化以最小化檔案大小
strip = true           # 移除符號以減小二進制文件大小
lto = true             # 啟用鏈接時優化
opt-level = "z"        # 優化文件大小
codegen-units = 1      # 單編譯單元
panic = "abort"        # 減少 panic 處理代碼
incremental = false    # 避免未使用的編譯 cache
